Implementing PDF feat