@@ -15,8 +15,10 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.OutputStream;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
@@ -29,12 +31,27 @@ public class BankStatementImpl {
      * Generate a pdf file of transactions
      * Send the file via email
      */
-    public List<Transaction> generateStatement(String accountNumber, String startDate, String endDate){
+//    public List<Transaction> generateStatement(String accountNumber, String startDate, String endDate){
+//        LocalDate start = LocalDate.parse(startDate, DateTimeFormatter.ISO_DATE);
+//        LocalDate end = LocalDate.parse(endDate, DateTimeFormatter.ISO_DATE);
+//        List<Transaction> transactionList = transactionRepository.findAll().stream().filter(transaction ->
+//                transaction.getAccountNumber().equals(accountNumber)).filter(transaction ->
+//                transaction.getCreatedAt().isEqual(start.atStartOfDay())).filter((transaction -> transaction.getCreatedAt().isEqual(end.atStartOfDay()))).toList();
+//        return transactionList;
+//    }
+
+    public List<Transaction> generateStatement(String accountNumber, String startDate, String endDate) {
         LocalDate start = LocalDate.parse(startDate, DateTimeFormatter.ISO_DATE);
-        LocalDate end = LocalDate.parse(endDate, DateTimeFormatter.ISO_DATE);
-        List<Transaction> transactionList = transactionRepository.findAll().stream().filter(transaction ->
-                transaction.getAccountNumber().equals(accountNumber)).filter(transaction ->
-                transaction.getCreatedAt().isEqual(start.atStartOfDay())).filter((transaction -> transaction.getCreatedAt().isEqual(end.atStartOfDay()))).toList();
+        LocalDate end = LocalDate.parse(endDate, DateTimeFormatter.ISO_DATE).plusDays(1); // Include transactions on the end date
+
+        List<Transaction> transactionList = transactionRepository.findAll().stream()
+                .filter(transaction -> transaction.getAccountNumber().equals(accountNumber))
+                .filter(transaction -> {
+                    LocalDateTime createdAt = transaction.getCreatedAt();
+                    return createdAt != null && createdAt.toLocalDate().isAfter(start.minusDays(1)) && createdAt.toLocalDate().isBefore(end);
+                })
+                .collect(Collectors.toList());
+
         return transactionList;
     }
 
